feat: Implement base entity and auditing for JPA entities
- Added BaseEntity class to provide common fields (id, createdAt, updatedAt) for all entities.
- Enabled JPA auditing in CrudJavaApplication.
- Updated Book and Loan entities to extend BaseEntity and utilize auditing features.

refactor: Update Book entity and repository

- Renamed authorUser to createdBy in Book entity.
- Added validation annotations for fields in Book entity.
- Updated BookRepository to reflect changes in field names.

refactor: Modify Loan entity and service

- Updated Loan entity to include new fields and validation.
- Changed loanDate and dueDate to LocalDateTime.
- Updated LoanService to handle new date types and business logic.

feat: Enhance User entity and security configuration

- Implemented UserDetails in User entity for Spring Security integration.
- Added JWT authentication and authorization mechanisms.
- Configured security settings to manage user roles and permissions.

chore: Update application properties for H2 database and CORS

- Configured H2 database for development and commented out PostgreSQL settings.
- Added CORS configuration for API access.

feat: Implement JWT token provider and authentication filter

- Created JwtTokenProvider for generating and validating JWT tokens.
- Implemented JwtAuthenticationFilter to handle JWT authentication in requests.

fix: Update User repository and service methods

- Renamed methods in UserRepository to reflect changes in User entity.
- Updated UserService to use new method names and handle user activation status.

style: Improve code formatting and organization

- Cleaned up code formatting across various classes for better readability.
- Added comments and documentation where necessary.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Biblioteca Online</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-  </html>
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sistema de Biblioteca - CRUD Java</title>
+    <meta name="description" content="Sistema completo de gerenciamento de biblioteca com empréstimos de livros">
+    <link rel="stylesheet" href="./src/styles.css">
+</head>
+<body>
+    <div id="app">
+        <div class="loading-container">
+            <div class="loading-spinner"></div>
+            <p>Carregando Sistema de Biblioteca...</p>
+        </div>
+    </div>
+    <script type="module" src="./src/main.tsx"></script>
+</body>
+</html>
